fix: no scrollbars

--- a/src/routes/AdPage.css
+++ b/src/routes/AdPage.css
@@ -59,7 +59,12 @@
 .overflow-scroll {
     max-width: 100vw;
     overflow: scroll;
-    padding-bottom: 1rem;
+    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+}
+
+.overflow-scroll::-webkit-scrollbar {
+    display: none;  /* Chrome, Safari and Opera */
 }
 
 .resizable {
